Couple more updates (#789)

--- a/pages/terms.tmpl
+++ b/pages/terms.tmpl
@@ -99,9 +99,9 @@
 
       You grant Convox a limited license to the software, data, and other content you deploy to Racks via Convox Console, solely for the purpose of deploying that content to Racks as you instruct.
 
-      <h2>Your Amazon Web Services Credentials</h2>
+      <h2>Your Cloud Provider Credentials</h2>
 
-      In order to deploy and manage software on Racks with Convox Console, you must provide Convox Console with access credentials for provisioning and managing Cloud Provider services on a Cloud Provider account.  Convox will use your credentials only to install Racks and manage applications as you instruct via Convox Console.  Convox may store your credentials on computers that Convox uses to operate, monitor, and improve Convox Console, including computers provisioned by others.  Convox will not publish or share your Amazon Web Services credentials with anyone else.
+      In order to deploy and manage software on Racks with Convox Console, you must provide Convox Console with access credentials for provisioning and managing Cloud Provider services on a Cloud Provider account.  Convox will use your credentials only to install Racks and manage applications as you instruct via Convox Console.  Convox may store your credentials on computers that Convox uses to operate, monitor, and improve Convox Console, including computers provisioned by others.  Convox will not publish or share your Cloud Provider credentials with anyone else.
 
       <h2>Feedback</h2>
 
