--- a/pages/index.tmpl
+++ b/pages/index.tmpl
@@ -166,6 +166,12 @@
 				</div>
 			</div>
 		</div>
+		<div class="container text-center buttons mt-4">
+			<a class="btn btn-primary text-light ml-2 mr-2" href="/pro">
+				Learn About Pro
+				<i class="far fa-arrow-alt-circle-right ml-1"></i>
+			</a>
+		</div>
 	</div>
 	<div class="section">
 		<div class="container text-center buttons">
