--- a/pages/pro.tmpl
+++ b/pages/pro.tmpl
@@ -4,7 +4,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-12 col-lg-6 col-xl-5 col-xxl-6">
-					<h1>Convox Pro</h1>
+					<h1 style="text-transform: none;">Convox Pro</h1>
 					<h3>Developer collaboration made easy</h3>
 					<h3>Give your team the tools they need to manage and monitor your apps and infrastructure across clouds</h3>
 					<div class="buttons">
