improve link tracking granularity (#797)
* improve link tracking granularity

* fix link from review

--- a/pages/index.tmpl
+++ b/pages/index.tmpl
@@ -9,7 +9,7 @@
 					<h3>Deploy, scale, and manage your applications with ease on a Kubernetes-based open source platform</h3>
 					<h3>Onboard new developers in minutes</h3>
 					<div class="buttons">
-						<a class="btn btn-primary text-light mr-2" href="https://docs.convox.com">
+						<a class="btn btn-primary text-light mr-2" href="https://docs.convox.com?link=gs1">
 							Get Started
 							<i class="far fa-arrow-alt-circle-right ml-1"></i>
 						</a>
@@ -94,28 +94,28 @@
 			<h1>Support for every cloud your team is using</h1>
 			<div class="clouds">
 				<div class="cloud">
-					<a class="btn btn-primary text-light" href="https://docs.convox.com">
+					<a class="btn btn-primary text-light" href="https://docs.convox.com?link=gs2aws">
 						<i class="fab fa-aws"></i>
 						Get Started
 					</a>
 					Amazon Web Services
 				</div>
 				<div class="cloud">
-					<a class="btn btn-primary text-light" href="https://docs.convox.com">
+					<a class="btn btn-primary text-light" href="https://docs.convox.com?link=gs2do">
 						<i class="fab fa-digital-ocean"></i>
 						Get Started
 					</a>
 					Digital Ocean
 				</div>
 				<div class="cloud">
-					<a class="btn btn-primary text-light" href="https://docs.convox.com">
+					<a class="btn btn-primary text-light" href="https://docs.convox.com?link=gs2gcp">
 						<i class="fab fa-google"></i>
 						Get Started
 					</a>
 					Google Cloud
 				</div>
 				<div class="cloud">
-					<a class="btn btn-primary text-light" href="https://docs.convox.com">
+					<a class="btn btn-primary text-light" href="https://docs.convox.com?link=gs2az">
 						<i class="fab fa-windows"></i>
 						Get Started
 					</a>
@@ -175,7 +175,7 @@
 	</div>
 	<div class="section">
 		<div class="container text-center buttons">
-			<a class="btn btn-primary text-light ml-2 mr-2" href="https://docs.convox.com">
+			<a class="btn btn-primary text-light ml-2 mr-2" href="https://docs.convox.com?link=gs3">
 				Get Started
 				<i class="far fa-arrow-alt-circle-right ml-1"></i>
 			</a>
