add video to homepage (#798)
* add video to homepage

* typo caught in review

--- a/pages/index.tmpl
+++ b/pages/index.tmpl
@@ -265,6 +265,24 @@
 			</div>
 		</div>
 	</div>
+	<div class="section video">
+		<h1> See How Easy it is to Get Started</h1>
+		<div class="container">
+			<div class="demo">
+				<div class="visual">
+					<div class="video-container">
+						<iframe width="670" height="377" src="https://www.youtube.com/embed/fF6eH6R65k0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					</div>
+				</div>
+				<div class="description">
+					<h2>Free, Quick, and Easy</h2>
+					<p>Get your first Rack up and running in a few minutes</p>
+					<p>Install via our web console or our command line interface</p>
+					<p>Deploy your first app with just a few simple commands</p>
+				</div>
+			</div>
+		</div>
+	</div>
 	<div class="section signup">
 		<h1>Subscribe to the Convox Newsletter</h1>
 		<link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
