--- a/assets/site.scss
+++ b/assets/site.scss
@@ -346,6 +346,25 @@ div.signup {
 	}
 }
 
+div.video {
+	h1 {
+		margin-bottom: 40px;
+	}
+	.video-container{
+		position: relative;
+		width: 100%;
+		padding-bottom: 56.25%; 
+		height: 0;
+	  }
+	  .video-container iframe{
+		position: absolute;
+		top:0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+	  }
+}
+
 div.enterprise-features {
 	padding-top: 20px;
 	padding-bottom: 60px;
