--- a/pages/index.tmpl
+++ b/pages/index.tmpl
@@ -248,7 +248,7 @@
 					The Convox advantage is that operations work is reduced to an absolute minimum. We used to have an extra
 					consultant just to keep our servers safe, taking care of updates, logs and backups, whereas now our
 					developers manage the entire infrastructure by themselves.
-					<footer class="blockquote-footer">Cesare Navorotto, <cite>Monrif</cite></footer>
+					<footer class="blockquote-footer">Cesare Navarotto, <cite>Monrif</cite></footer>
 				</blockquote>
 			</div>
 		</div>
